# stevedores.org

./: .cursorrules  .gitignore  Dockerfile  README.md  flake.nix  index.html  justfile  nginx.conf  nginx.conf.template  package.json  rollout.yaml
.github/: copilot-instructions.md  system-instruction.md
.github/workflows/: ci.yml  release.yml
crate-ai-engine/: Cargo.toml
crate-ai-engine/src/: lib.rs
docs/design/: 2026-06-09-gap-map.md  README.md
frontend/: package.json
frontend/src/: server.ts
src/: App.tsx  data.ts  index.css  types.ts
src/components/: ContributorsRank.tsx  ProjectList.tsx  TechSpecs.tsx  TerminalPlayground.tsx  VesselSimulator.tsx
